# jungo

./: Cargo.toml
benches/: ai_benchmark.rs  board_benchmark.rs  random_ai_benchmark.rs  random_ai_comparison.rs  random_ai_quick_bench.rs
src/: ai.rs  board.rs  fast_board.rs  game.rs  lib.rs  main.rs  player.rs  stats.rs  zobrist.rs
src/ai/: fast_random.rs  light_random.rs  mc.rs  mcts.rs  minimax.rs  mod.rs  random.rs
