[package]
name = "jungo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jungo"
path = "src/main.rs"

[[bin]]
name = "run_stats"
path = "src/bin/run_stats.rs"

[[bin]]
name = "mcts_stats"
path = "src/bin/mcts_stats.rs"

[[bin]]
name = "mcts_vs_mc"
path = "src/bin/mcts_vs_mc.rs"

[[bin]]
name = "quick_test"
path = "src/bin/quick_test.rs"

[[bin]]
name = "final_test"
path = "src/bin/final_test.rs"





[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "board_benchmark"
harness = false

[[bench]]
name = "ai_benchmark"
harness = false
