[package]
name = "jungo"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
chrono = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "board_benchmark"
harness = false

[[bench]]
name = "ai_benchmark"
harness = false

[[bench]]
name = "random_ai_benchmark"
harness = false

